[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/UI/multiplayer.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/vegur/Vegur-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/ServerListItem.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/vegur/Vegur-Light.otf" type="DynamicFontData" id=7]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.294118 )

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 12
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 12
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=7]

[node name="PanelContainer" type="PanelContainer"]
margin_right = 287.0
margin_bottom = 57.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 9 )
script = ExtResource( 3 )

[node name="default_background" type="Panel" parent="."]
margin_right = 287.0
margin_bottom = 57.0
custom_styles/panel = SubResource( 5 )

[node name="PlayerListItem" type="Control" parent="."]
margin_right = 287.0
margin_bottom = 57.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 287.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_right = 50.0
margin_bottom = 57.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 50.0
margin_right = 287.0
margin_bottom = 57.0
size_flags_horizontal = 3
custom_constants/separation = 3
alignment = 1

[node name="Space" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_top = 9.0
margin_right = 237.0
margin_bottom = 9.0

[node name="ServerName" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 12.0
margin_right = 237.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Server Name"
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 237.0
margin_bottom = 45.0

[node name="PlayerCount" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
margin_right = 116.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "Player Count:"
valign = 1

[node name="Version" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
margin_right = 237.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
text = "0"
valign = 1

[node name="Space2" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 237.0
margin_bottom = 48.0

[node name="select" type="Button" parent="."]
margin_right = 287.0
margin_bottom = 57.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 7 )

[connection signal="pressed" from="select" to="." method="_on_select_pressed"]
